# DocuDesks

./: .gitignore  README.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PLAY_STORE.md  PRIVACY.md  RELEASE_PLAN.md
electron/: main.ts  preload.ts
scripts/: add-edit-locales.mjs  android-names.mjs  annot-cover.mjs  blank-undo.mjs  build-electron.mjs  check-i18n.mjs  color-chip.mjs  cover-color.mjs  dev.mjs  e2e-tauri.mjs  e2e.mjs  edit-save-signature.mjs  edit-shot.mjs  edit-shot2.mjs  edit-shot3.mjs  edit-sign-merge.mjs  feature-shots.mjs  gesture-heal.mjs  licenses-check.mjs  make-icon.mjs  make-letter-samples.mjs  make-samples.mjs  mobile-edit-fixes.mjs  mobile-shot.mjs  multi-stamps.mjs  ocr-probe.mjs  ocr-probe2.mjs  ocr-scan.mjs  pages-drag.mjs  photo-shot.mjs  pick-net.mjs  picker-shot.mjs  picker-shot2.mjs  pinch-probe.mjs  pinch-probe2.mjs  pinch-spy.mjs  prepare-ocr.mjs  preview.mjs  print-dryrun.mjs  probe-fonts.mjs  (+14 more)
src/: App.tsx  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionBar.tsx  Attributions.tsx  DocumentList.tsx  MobileNav.tsx  ResultOverlay.tsx  RightPanel.tsx  SignatureStudio.tsx  Stage.tsx  TopBar.tsx  icons.tsx
src/editor/: editStore.ts  exportPdf.ts  fonts.ts  types.ts
src/i18n/: de.json  en.json  es.json  fr.json  index.ts  si.json  sv.json
src/lib/: drawing.ts  extractSignature.ts  fileName.ts  imageUtils.ts  ink.ts  (+9 more)
(+8 files in other folders)
