[package]
name = "signer"
version = "0.1.0"
description = "Bulk-sign and edit PDF documents. Sign one, sign them all."
edition = "2021"

[lib]
name = "signer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = "0.61"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
